--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/jpeg" href="%PUBLIC_URL%/tour.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#003366" />
     <meta
       name="description"
-      content="HERE Travels - Discover amazing tours and travel experiences in Sri Lanka. Book your dream vacation with our expert travel services."
+      content="Sri Yatra Travels - Discover amazing tours and travel experiences in Sri Lanka. Book your dream vacation with our expert travel services."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>HERE Travels - Sri Lanka Tours & Travel Services</title>
+    <title>Sri Yatra Travels - Sri Lanka Tours & Travel Services</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
